--- a/main.css
+++ b/main.css
@@ -1,12 +1,36 @@
 h1{
   text-align: left;
-font-size: 24dp;
+font-size: 48px;
 }
 center{
   font-size: 20dp;
-  font-family: Times;
+  font-family: "Comic Sans MS", cursive, sans-serif;
 
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    height:50%;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 16px;
+}
+select{
+width:100%;
+}
 body{
-  background-color: lightblue;
+font-family:"Arial Black", Gadget, sans-serif;
+  background-image:url("bg.jpg");
+  background-repeat:no-repeat;
+background-size:100%;
+margin:100px;
+}
+table{
+padding:20px;
 }
