--- a/log.css
+++ b/log.css
@@ -16,7 +16,9 @@ form{
   text-decoration-color: white;
 }
 body{
-
-  background-color: pink;
-  backface-visibility: hidden;
+font-family:"Arial Black", Gadget, sans-serif;
+  background-image:url("bg.jpg");
+  background-repeat:no-repeat;
+background-size:100%;
+margin:100px;
 }
