--- a/reg.css
+++ b/reg.css
@@ -4,7 +4,7 @@ margin-left:50px;
 margin-right:50px;
 margin-top:225px;
 margin-bottom:50px;
-background-image:url(".jpg");
+background-image:url("bg.jpg");
 background-repeat:no-repeat;
 background-size:100% 100%;
 }
